# try

./: .gitignore  BENCH.md  Dockerfile  README.md  howtouse_and_architecture.md  memory.md  model.md  pyproject.toml  spec.md  talked_history.md
.devcontainer/: devcontainer.json
.devcontainer/dockerfiles/: dev.Dockerfile
apps/: anim.py  instance_editor.py  solver_tuner.py
apps/components/mermaid_click/: index.html
configs/: solver_config.yaml
instances/: barm_small.yaml  edited.yaml  full_cd.yaml  full_small.yaml
route_opt/: __init__.py  barm_model.py  bench.py  flow.py  gui_io.py  loader.py  model.py  report.py  rolling.py  run_barm.py  run_full.py  run_rolling.py  schema.py  solver_cfg.py
tests/: test_anim.py  test_barm.py  test_flow.py  test_full.py  test_gui_io.py  test_rolling.py  test_schema.py
