[project]
name = "stock-data-factory"
version = "0.1.0"
description = "stock-data-factory monorepo for XBRL and financial data workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "requests",
    "beautifulsoup4",
    "lxml",
    "python-xbrl",
    "ixbrl-parse",
    "SQLAlchemy",
    "psycopg2-binary",
    "dagster",
    "dagster-webserver",
    "dagster-dg-cli",
    "langgraph",
    "networkx",
    "pyvis",
    "streamlit",
    "tqdm",
    "pydantic",
    "langchain-core",
    "langchain-openai",
    "ortools",
    "matplotlib",
    "japanize-matplotlib",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dag_process", "db_process", "file_processor", "model", "synthetic_dag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"] # Line too long (handled by formatter usually, but E501 can be noisy)

# 単体実行(streamlit run / python script.py)のため先頭で sys.path をブートストラップしてから
# first-party を import するファイルは、その import がトップに来ない（E402 は意図通り）。
[tool.ruff.lint.per-file-ignores]
"apps/corrections_gui.py" = ["E402"]
"apps/instance_editor.py" = ["E402"]
"scripts/inspect_pl_subtrees.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "realdata: tests that require a real populated database and fixed observed values",
]
